<resources>
    <string name="app_name">MyTweet</string>
    <string name="welcome_header">Welcome to MyTweet</string>
    <string name="welcome_sub_header">See what\'s happening</string>
    <string name="sign_up">Sign-Up</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_button">Register For MyTweet</string>
    <string name="register">Register</string>
    <string name="not_registered">Not registered?</string>
    <string name="already_registered">Already Registered?</string>
    <string name="settings">Settings</string>
    <string name="Homepage">Homepage</string>
    <string name="timelineTitle">Timeline</string>
    <string name="send_tweet">Send Tweet</string>
    <string name="hot_takes">Share your hot takes</string>
    <string name="Logout">Logout</string>
    <string name="defaultdate">25/12/2016</string>
    <string name="defaultTweetText">Make America Great Again!</string>
    <string name="defaultAuthor">Donald J. Trump</string>
    <string name="composeNew">New Tweet</string>
    <string name="defaultCharCount">140</string>
    <string name="edit_date">Edit Date</string>
    <string name="contact">Select Contact</string>
    <string name="emailTweet">Email Tweet</string>
    <string name="tweetReportSubject">Tweet Report</string>
</resources>
